; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/greybus/extr_power_supply.c_next_interval.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/greybus/extr_power_supply.c_next_interval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gb_power_supply = type { i32 }

@update_interval_max = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gb_power_supply*)* @next_interval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @next_interval(%struct.gb_power_supply* %0) #0 {
  %2 = alloca %struct.gb_power_supply*, align 8
  store %struct.gb_power_supply* %0, %struct.gb_power_supply** %2, align 8
  %3 = load %struct.gb_power_supply*, %struct.gb_power_supply** %2, align 8
  %4 = getelementptr inbounds %struct.gb_power_supply, %struct.gb_power_supply* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @update_interval_max, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %23

9:                                                ; preds = %1
  %10 = load %struct.gb_power_supply*, %struct.gb_power_supply** %2, align 8
  %11 = getelementptr inbounds %struct.gb_power_supply, %struct.gb_power_supply* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = mul nsw i32 %12, 2
  store i32 %13, i32* %11, align 4
  %14 = load %struct.gb_power_supply*, %struct.gb_power_supply** %2, align 8
  %15 = getelementptr inbounds %struct.gb_power_supply, %struct.gb_power_supply* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @update_interval_max, align 4
  %18 = icmp sgt i32 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %9
  %20 = load i32, i32* @update_interval_max, align 4
  %21 = load %struct.gb_power_supply*, %struct.gb_power_supply** %2, align 8
  %22 = getelementptr inbounds %struct.gb_power_supply, %struct.gb_power_supply* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  br label %23

23:                                               ; preds = %8, %19, %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
